[project]
name = "sidd_denoising"
version = "0.1.0"
description = "Hybrid Attentive State-Space Transformer for SIDD Denoising"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch==2.12.0",
    "torchvision==0.27.0",
    "accelerate==1.13.0",
    "wandb==0.27.0",
    "lmdb==2.2.0",
    "opencv-python==4.13.0.92",
    "scikit-image==0.26.0",
    "einops==0.8.2",
    "numpy==2.4.5",
    "pywavelets==1.9.0",
    "tqdm==4.67.3",
    "pyyaml==6.0.3",
    "ruff==0.15.13",
    "scipy==1.15.2",
]

[project.optional-dependencies]
mamba = [
    "mamba-ssm",
    "causal-conv1d",
]

[tool.uv]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
